@@ -124,20 +124,6 @@ PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
          http://svn.apache.org/viewcvs?view=rev&rev=154319
        +1: stoddard, striker, wrowe (as corrected in subsequent patches)
 
-    *) Block mod_cgid usage on Solaris 10 due to OS bugs.  PR 34264.
-       http://svn.apache.org/viewcvs?view=rev&rev=264866
-       +1: jerenkrantz, colm, jim
-         rpluem: Now that patches for this bug are available I would prefer
-                 Justins patch:
-                         http://svn.apache.org/viewcvs?rev=326018&view=rev
-                 which checks the patchlevel of the machine.
-                 Maybe it should spit out a BIG warning about the
-                 patches in any case as sometimes build machine and
-                 install machine are different.
-         jim:    +1 on http://svn.apache.org/viewcvs?rev=326018&view=rev
-                 as well.
-         colm:   another +1 on the later patch too.
-
 PATCHES PROPOSED TO BACKPORT FROM TRUNK:
   [ please place SVN revisions from trunk here, so it is easy to
     identify exactly what the proposed changes are!  Add all new
